--- a/index.html
+++ b/index.html
@@ -22,8 +22,21 @@
 </head>
 <body>
 
-    <!-- LOADER -->
-    <!-- LOADER END -->
+    <!-- PRELOADER -->
+    <div class="preloaderWrapper">
+      <div class="preloader">
+        <div class="ring ring1"></div>
+        <div class="ring ring2"></div>
+        <div class="ring ring3"></div>
+        <div class="ring ring4"></div>
+        <div class="ring ring5"></div>
+        <div class="ring ring6"></div>
+        <div class="ring ring7"></div>
+        <div class="ring ring8"></div>
+        <div class="ring ring9"></div>
+      </div>
+    </div>
+    <!-- PRELOADER END -->
 
 
     <!-- VIEW PROJECT BUTTON -->
@@ -136,12 +149,12 @@
           <!-- CONTACT -->
           <div class="contactWrapper">
             <h2 class="subTitle">Contact  -  <span class="DRM">ME</span></h2>
-            <div class="contact">
-              <input type="text" class="field" placeholder="Name" /><br>
-              <input type="email" class="field" placeholder="E-mail" />
-              <textarea id="message" class="field" placeholder="Message"></textarea>
+            <form class="contact" action="contact.php" method="POST">
+              <input type="text" class="field" placeholder="Name" name="name"/><br>
+              <input type="email" class="field" placeholder="E-mail" name="email"/>
+              <textarea id="message" class="field" placeholder="Message" name="message"></textarea>
               <input id="submit" type="submit" value="Send">
-            </div>
+            </form>
           </div>
 
 
