Updated Contact Form

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
           <!-- CONTACT -->
           <div class="contactWrapper">
             <h2 class="subTitle">Contact  -  <span class="DRM">ME</span></h2>
-            <form class="contact" action="contact.php" method="POST">
+            <form class="contact" action="https://formspree.io/daverela@gmail.com" method="POST">
               <input type="text" class="field" placeholder="Name" name="name"/><br>
-              <input type="email" class="field" placeholder="E-mail" name="email"/>
+              <input type="email" class="field" placeholder="E-mail" name="_replyto"/>
               <textarea id="message" class="field" placeholder="Message" name="message"></textarea>
               <input id="submit" type="submit" value="Send">
             </form>
