Updated Contact Form

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h2 class="subTitle">Contact  -  <span class="DRM">ME</span></h2>
             <form class="contact" action="https://formspree.io/daverela@gmail.com" method="POST">
               <input type="text" class="field" placeholder="Name" name="name"/><br>
-              <input type="email" class="field" placeholder="E-mail" name="_replyto"/>
+              <input type="email" class="field" placeholder="E-mail" name="email"/>
               <textarea id="message" class="field" placeholder="Message" name="message"></textarea>
               <input id="submit" type="submit" value="Send">
             </form>
